Refactor Booking and enhance Equipment handling
Refactor the Booking class to include participant names and adjust the corresponding constructor. Rename SequenceResetter file and update import paths for better organization. Improve Equipment handling by using a more abstract save method in EquipmentController.